# zlang-project

./: ASSIGNMENT_1_1.md  ASSIGNMENT_1_2.md  ASSIGNMENT_1_3.md  ASSIGNMENT_1_4.md  ASSIGNMENT_1_5.md  ASSIGNMENT_2_1.md  ASSIGNMENT_2_2.md  ASSIGNMENT_2_3.md  ASSIGNMENT_2_3_OWNERSHIP.md  ASSIGNMENT_2_4.md  ASSIGNMENT_2_4_TASK2_TYPE_MAPPING.md  ASSIGNMENT_2_4_TASK3_EXPRESSION_TEMPLATE.md  ASSIGNMENT_2_4_TASK4_PHILOSOPHY.md  ASSIGNMENT_2_4_TASK4_PHILOSOPHY_DRAFT.md  BACKEND_DESIGN.md  CMakeLists.txt  Dockerfile  ENGINES_COMPARISON.md  EXCEPTION_HANDLING_PROPOSAL.md  FINAL_EVALUATION.md  FINAL_PHASE_3_RESULTS.md  GETTING_STARTED.md  INSTALLATION.md  LLVM_1_4_TEST_RESULTS.md  LLVM_1_4_TYPE_SYSTEM_PLAN.md  LLVM_1_4_WEEK1_PROGRESS.md  LLVM_1_4_WEEK2_PLAN.md  LLVM_1_4_WEEK2_PROGRESS.md  LLVM_1_4_WEEK3_FINAL_REPORT.md  PHASE_3_INSTRUCTIONS.md  PHASE_3_TEST_RESULTS.md  PROJECT_PLAN.md  README.md  STDLIB_README.md  STDLIB_VERIFICATION_REPORT.md  VERIFICATION_RESULTS.md  VERIFICATION_TEST_10_STEPS.md  ZLANG_EVALUATION_REPORT.md  arith  arith.z  (+38 more)
docs/: 1_1_LLVM_ARCHITECTURE_AND_IR.md  1_2_LLVM_C_API_CODEGEN.md  1_3_LLVM_CONTROL_FLOW.md  1_4_LLVM_TYPE_SYSTEMS.md  1_4_LLVM_TYPE_SYSTEMS_PREVIEW.md  1_5_JIT_EXECUTION_ENGINE_PREVIEW.md  1_5_LLVM_JIT_EXECUTION_ENGINE.md  2_1_LLVM_LEXING_TOKENIZATION.md  2_2_LLVM_PARSING.md  2_2_LLVM_PARSING_AST_PREVIEW.md  2_3_LLVM_SEMANTIC_ANALYSIS_AND_CODEGEN.md  2_3_LLVM_SEMANTIC_ANALYSIS_PREVIEW.md  2_3_Z_LANG_SEMANTIC_ANALYSIS_OWNERSHIP.md  2_4_LLVM_CODEGEN.md  2_4_LLVM_CODEGEN_INTEGRATION_PREVIEW.md  2_4_LLVM_IR_CODEGEN_FINAL.md  2_5_LLVM_REAL_TIME_VERIFICATION_PREVIEW.md  LANGUAGE_SPECIFICATION.md
post-doc/: CMakeLists.txt  POST_DOC_FINAL_REPORT.md  POST_DOC_RESEARCH_PLAN.md  WEEK3_PROGRESS.md  WEEK4_PROGRESS.md  WEEK5_PROGRESS.md  WEEK6_PROGRESS.md  WEEK7_PROGRESS.md  WEEK8_PROGRESS.md
post-doc/dialect/: AIAccel.td  AIAccelOps.cpp  AIAccelOps.h
post-doc/passes/: BackendPass.cpp  BackendPass.h  BufferizationPass.cpp  BufferizationPass.h  FusionPass.cpp  FusionPass.h  IntegrationPass.cpp  IntegrationPass.h  LoopTilingPass.cpp  LoopTilingPass.h
post-doc/test/: AIAccel_test.mlir  Backend_test.mlir  BufferizationPass_test.mlir  FusionPass_test.mlir  Integration_test.mlir  LoopTiling_test.mlir
src/: main.cpp
src/analysis/: WCETAnalyzer.cpp  WCETAnalyzer.h
src/ast/: ASTNode.h
src/codegen/: BackendCompiler.cpp  BackendCompiler.h  CodeGenerator.cpp  CodeGenerator.h  CompilerPipeline.cpp  CompilerPipeline.h  GenericType.cpp  GenericType.h  IntegratedTypeChecker.cpp  IntegratedTypeChecker.h  Type.h  TypeInference.cpp  TypeInference.h  test_generic_type.cpp  test_type_inference.cpp  test_week3_e2e.cpp
src/lexer/: Lexer.cpp  Lexer.h  Token.h
src/parser/: Parser.cpp  Parser.h
src/semantic/: SymbolTable.h
stdlib/: collections.z  io.z  math.z  package.json
stdlib-examples/: collections_demo.z  math_demo.z
stdlib-tests/: test_collections_library.z  test_math_library.z
tests/: TypeMappingTest.cpp
